--- a/news21national/templates/n21alpha/authopenid/password_change_form.html
+++ b/news21national/templates/n21alpha/authopenid/password_change_form.html
@@ -6,7 +6,7 @@
 
 
 
-
+<div class="grid_16 contentheader">
 {% if set_password %}
 <h1>{% trans 'Set password' %}</h1>
 <p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
@@ -37,6 +37,7 @@
 </form>
 
 
-
 {% endif %}
+</div>
+
 {% endblock %} 
