--- a/news21national/templates/n21alpha/core/profile.html
+++ b/news21national/templates/n21alpha/core/profile.html
@@ -30,6 +30,10 @@
 		<h4>Your Avatar/Photo {% comment %} (<a href="http://www.gravatar.com">gravatar.com</a>) {% endcomment %}</h4>
 		{% avatar user 250 %}<br/><a href="{% url avatar_change %}">Change your photo <br/>Warning: You will leave this page. Save if needed!</a>
 	</div>
+	<div class="contentcontainer">
+		<h4>Login Information</h4>
+		<a href="{% url auth_password_change %}">Change your password <br/>Warning: You will leave this page. Save if needed!</a>
+	</div>
 </div>
 {% endblock %}
 
