--- a/news21national/templates/n21alpha/story/metastory.html
+++ b/news21national/templates/n21alpha/story/metastory.html
@@ -6,14 +6,14 @@
 {% load discussion_tags %}
 
 {% block content %}
-	
-	<div class="grid_10">
+	<div class="clear"></div>
 	<form action="{{ form_url }}" class="uniForm" method="post">
+	<div class="grid_10">
 	<div class="genericForm contentheader">	
 		<h4>Package Information</h4>
 		{% if metastory_id %}
 			<div style="padding:5px;">
-				<span class="icon-{% if metastory.status == "Approved" %}accept{% else %}exclamation{% endif %}"></span> STATUS: {{metastory.status}} 
+				<span class="icon-{% if metastory.status == "Approved" %}accept{% else %}{% if metastory.status == "Rejected" %}exclamation{% else %}pending{% endif %}{% endif %}"></span> STATUS: {{metastory.status}} 
 				<a href="#editorscomments">[View Editor's Comments]</a>
 			</div>
 		{% endif %}
@@ -67,6 +67,7 @@
 			<h4>Package Stories <a href="{% url story_new metastory_id %}">[+]</a></h4>
 			{% for story in stories %}
 			<div class="sidebar-right-listing alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
+				<span class="icon-{% if story.status == "Approved" %}accept{% else %}{% if story.status == "Rejected" %}exclamation{% else %}pending{% endif %}{% endif %}"></span>
 				{% for photo in story_photos %}
 					{% if photo.id == story.primary_image %}
 					<a class="zoom" rel="group" title="{{ photo.title }}" href="{{ photo.get_original_url }}"><img src="{{ photo.get_tiny_thumbnail_url }}" style="vertical-align:middle" class="outline" /></a>
@@ -92,8 +93,7 @@
 		<h4>Package Primary Image</h4>
 		<div class="formHint" id="hint_id_package_image" style="float:left;"><a class="helptip">Package Image</a></div>
 		<div class="clear"></div>
-		<div class="formHint" id="hint_id_news21_image" style="float:left;"><a class="helptip">News21 Image</a></div>
-		<div class="clear"></div>
+		
 		{% if primary_image %}
 		<div class="sidebar-right-listing image-selector alternating-row-selected">
 			<div class="image-selector-radio"><input type="radio" name="primary_image" id="id_primary_image" checked value="{{ primary_image.id }}"></div>
@@ -124,10 +124,49 @@
 			</div>
 			{% endif %}
 		{% endfor %}
-		</form>
+		
+		
+		<div class="clear"></div>
+		<br/>
+		<br/>
+		<h4>News21 Site Image (440x250)</h4>
+		<div class="formHint" id="hint_id_news21_image" style="float:left;"><a class="helptip">News21 Image</a></div>
+		<div class="clear"></div>
+		
+		{% if secondary_image %}
+		<div class="sidebar-right-listing image-selector alternating-row-selected">
+			<div class="image-selector-radio"><input type="radio" name="secondary_image" id="id_secondary_image" checked value="{{ secondary_image.id }}"></div>
+			<div class="image-selector-thumb"><a class="zoom" rel="group" title="{{ secondary_image.title }}" href="{{ secondary_image.get_original_url }}"><img src="{{ secondary_image.get_thumbnail_url }}" class="outline" /></a></div>
+			<div class="image-selector-info">
+				<span class="bold">Title:</span> {{ primary_image.title }}
+				<br/>
+				<span class="bold">Width & Height:</span> {{ primary_image.get_width }} x {{ primary_image.get_height }}
+				<br/>
+				<span class="bold">Caption:</span> {{ primary_image.summary }}
+			</div>
+			<div class="clear"></div>
+		</div>
+		{% endif %}
+		{% for photo in site_photos %}
+			{% if photo.id != secondary_image.id and photo.get_width == 440 and photo.get_height == 250 %}
+			<div class="sidebar-right-listing image-selector alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
+				<div class="image-selector-radio"><input type="radio" name="secondary_image" id="id_secondary_image" value="{{ photo.id }}"></div>
+				<div class="image-selector-thumb"><a class="zoom" rel="group" title="{{ photo.title }}" href="{{ photo.get_original_url }}"><img src="{{ photo.get_thumbnail_url }}" class="outline" /></a></div>
+				<div class="image-selector-info">
+					<span class="bold">Title:</span> {{ photo.title }}
+					<br/>
+					<span class="bold">Width & Height:</span> {{ photo.get_width }} x {{ photo.get_height }}
+					<br/>
+					<span class="bold">Caption:</span> {{ photo.summary }}
+				</div>
+				<div class="clear"></div>
+			</div>
+			{% endif %}
+		{% endfor %}
 		
 	</div>
-
+	
+	</form>
 	
 	<div class="clear"></div>
 	<br/>
@@ -153,7 +192,7 @@
 	<div class="grid_16 contentheader">
 		<br/>
 		<h4 id="editorscomments">Editor's Comments</h4>
-		<div><span class="icon-{% if metastory.status == "Approved" %}accept{% else %}exclamation{% endif %}"></span> STATUS: {{metastory.status}}</div>
+		<div><span class="icon-{% if metastory.status == "Approved" %}accept{% else %}{% if metastory.status == "Rejected" %}exclamation{% else %}pending{% endif %}{% endif %}"></span> STATUS: {{metastory.status}}</div>
 		{% comment_tree_for_object metastory as comments %}
 		{% for comment in comments %}
 			<div style="padding:15px;" class="sidebar-right-listing image-selector alternating-row-{% if forloop.counter|divisibleby:2 %}even{% else %}odd{% endif %}">
@@ -168,7 +207,7 @@
 			<form action="{% url editorsdesk_update_status_metastory metastory_id %}" method="post">
 				<textarea name="comment_body" id="comment_body" rows="8" cols="100"></textarea>
 				<br/>
-				<select name="story_status" id="story_status" style="float:left;width:150px;margin-right:20px;">
+				<select name="metastory_status" id="metastory_status" style="float:left;width:150px;margin-right:20px;">
 					<option value="Pending Approval">Pending Approval</option>
 					<option value="Rejected" {% if story.status == "Rejected" %} selected {% endif %} >Rejected</option>
 					<option value="Approved" {% if story.status == "Approved" %} selected {% endif %} >Approved</option>
