--- a/news21national/templates/n21alpha/base.html
+++ b/news21national/templates/n21alpha/base.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}templates/n21alpha/fancybox/jquery.fancybox-1.2.5.css" media="screen" />
 		
 		
-		<link rel="stylesheet" href="http://assets.news21.com/beta/news21skin.css" type="text/css" media="all" />
+		<link rel="stylesheet" href="http://assets.news21.com/2010/news21skin.css" type="text/css" media="all" />
 		
 		{% block extra_styles %}{% endblock %}
 		
@@ -78,9 +78,9 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="{{ MEDIA_URL }}templates/n21alpha/fancybox/jquery.fancybox-1.2.5.pack.js"></script>
 		<script type="text/javascript" src="{{ MEDIA_URL }}templates/n21alpha/js/jsnippets.js"></script>
-		<script type="text/javascript" src="http://assets.news21.com/beta/news21tooltip.js"></script>
+		<script type="text/javascript" src="http://assets.news21.com/2010/news21tooltip.js"></script>
 		
-		<script type="text/javascript" src="http://assets.news21.com/beta/news21skin.js"></script>
+		<script type="text/javascript" src="http://assets.news21.com/2010/news21skin.js"></script>
 		
     	{% block extra_scripts %}{% endblock %}
 		<script type="text/javascript" charset="utf-8">
